# Inertia

./: Cargo.toml  README.md
src/: args.rs  cli.rs  data.rs  main.rs  repo.rs  tasks.rs
src/cli/: cmds.rs  dates.rs  git.rs  output.rs  tables.rs
