[package]
name = "agenda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }

clap = { version = "4.1.1", features = ["derive", "cargo"] }
chrono = { version = "0.4.23", features = ["serde"] }
dirs = "4.0.0"
colored = "2.0.0"
prettytable-rs = "0.10.0"